--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
-<‍script type="text/x-thebe-config">
-  {
-    useBinder: false,
-    useJupyterLite: true,
-    mountActivateWidget: true,
-    mountStatusWidget: true,
-  }
-<‍/script>
+<head>
+  <script
+    type="text/javascript"
+    src="https://unpkg.com/thebe-lite@latest/dist/lib/thebe-lite.min.js"
+  ></script>
+  <script type="text/javascript" src="https://unpkg.com/thebe@rc/lib/index.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/thebe@thebe@rc/lib/thebe.css" />
+  
+  <script type="text/x-thebe-config">
+    {
+        useBinder: false,
+        useJuptyerLite: true,
+    }
+  </script>
+  
+  <script id="jupyter-config-data" type="application/json">
+    {
+      "litePluginSettings": {
+        "@jupyterlite/pyodide-kernel-extension:kernel": {
+          "pipliteUrls": ["https://unpkg.com/@jupyterlite/pyodide-kernel@0.0.7/pypi/all.json"],
+          "pipliteWheelUrl": "https://unpkg.com/@jupyterlite/pyodide-kernel@0.0.7/pypi/piplite-0.0.7-py3-none-any.whl"
+        }
+      },
+      "enableMemoryStorage": true,
+      "settingsStorageDrivers": ["memoryStorageDriver"]
+    }
+  </script>
+
+</head>
 
 <‍div class="thebe-activate"><‍/div>
 <‍div class="thebe-status"><‍/div>
