--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
 
 </head>
 
-<‍div class="thebe-activate"><‍/div>
-<‍div class="thebe-status"><‍/div>
+<body>
+  <‍div class="thebe-activate"><‍/div>
+  <‍div class="thebe-status"><‍/div>
+</body>
+
