--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE HTML>
+<html>
+
 <head>
   <script
     type="text/javascript"
@@ -32,4 +35,4 @@
   <‍div class="thebe-activate"><‍/div>
   <‍div class="thebe-status"><‍/div>
 </body>
-
+</html>
