--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <script type="text/javascript" src="https://unpkg.com/thebe@rc/lib/index.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/thebe@thebe@rc/lib/thebe.css" />
   
-  <script type="text/x-thebe-config">
+  <‍script type="text/x-thebe-config">
     {
-        useBinder: false,
-        useJuptyerLite: true,
+      useBinder: false,
+      useJupyterLite: true,
+      mountActivateWidget: true,
+      mountStatusWidget: true,
     }
-  </script>
+  <‍/script>
   
   <script id="jupyter-config-data" type="application/json">
     {
