--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@ document.querySelector("#activateButton").addEventListener('click', bootstrapThe
 </script>
 
 <html>
-  <pre data-executable="true" data-language="python"></pre>
+  <pre data-executable="true" data-language="python">
+    %matplotlib inline
+    import numpy as np
+    import matplotlib.pyplot as plt
+    x = np.linspace(0,10)
+    plt.plot(x, np.sin(x))
+    plt.plot(x, np.cos(x))
+  </pre>
 </html>
