--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@ document.querySelector("#activateButton").addEventListener('click', bootstrapThe
 <html>
   <pre data-executable="true" data-language="python">
 # Some more prerequisites, just run this
-import panel as pn
-pn.extension(comms='ipywidgets')
 import networkx as nx
 import pandas as pd
 import json
 from ipycytoscape import *
 from pathlib import Path
 
-df_nodes = pd.read_csv(str(Path.cwd() / 'data/data_ariadne_nodes.csv'), sep=';')
-df_edges = pd.read_csv(str(Path.cwd() / 'data/data_ariadne_edges.csv'), sep=';')
+
+df_nodes = pd.read_csv(str('https://raw.githubusercontent.com/caggursoy/thebetest/main/data/data_ariadne_nodes.csv'), sep=';')
+df_edges = pd.read_csv(str('https://raw.githubusercontent.com/caggursoy/thebetest/main/data/data_ariadne_edges.csv'), sep=';')
 
 df_nodes = df_nodes.fillna('')
 df_edges = df_edges.fillna('')
@@ -107,7 +106,7 @@ def const_graph(nodes_df, edges_df, init):
     data_graph = json.dumps(total_graph_dict)
     json_to_python = json.loads(data_graph)
     # result_cyto = CytoscapeWidget()
-    cyto_graph.graph.clear()
+    #cyto_graph.graph.clear()
     cyto_graph.graph.add_graph_from_json(json_to_python)
     cyto_graph.set_style(style_elements)
     # also save the initial json to a file
@@ -129,7 +128,7 @@ def const_graph(nodes_df, edges_df, init):
 # reset the graph
 def res_graph(node):
     with out:
-        cyto_graph.graph.clear()
+        #cyto_graph.graph.clear()
         const_graph(df_nodes[df_nodes['subgraph'] == 'initial'], df_edges[df_nodes['subgraph'] == 'initial'], init=True)
 
 def log_clicks(node):
