--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   {
     requestKernel: false,
     binderOptions: {
-      repo: "caggursoy/thebetest",
-      ref: "master",
+      repo: "cytoscape/ipycytoscape",
+      ref: "1.3.1",
       repoProvider: "github",
     },
   }
@@ -25,7 +25,6 @@ document.querySelector("#activateButton").addEventListener('click', bootstrapThe
 <html>
   <pre data-executable="true" data-language="python">
 # Some more prerequisites, just run this
-%pip install ipycytoscape --quiet
 import networkx as nx
 import pandas as pd
 import json
@@ -38,12 +37,6 @@ df_edges = pd.read_csv(str('https://raw.githubusercontent.com/caggursoy/thebetes
 
 df_nodes = df_nodes.fillna('')
 df_edges = df_edges.fillna('')
-
-df_edges
-
-import networkx as nx
-import pandas as pd
-import json
 
 # Import stuff to dynamically update the graph
 from ipywidgets import Output
