--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <script type="text/x-thebe-config">
   {
-    requestKernel: false,
+    requestKernel: true,
     binderOptions: {
-      repo: "cytoscape/ipycytoscape",
-      ref: "1.3.1",
+      repo: "QuantStack/ipycytoscape",
+      ref: "1.2.0",
       repoProvider: "github",
     },
   }
