--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ pre{
 }
 </style>
 <html>
-  <pre hidden data-executable="true" data-language="python" data-readonly="true">
+  <pre data-executable="true" data-language="python">
 # Some more prerequisites, just run this
 import networkx as nx
 import pandas as pd
